--- a/HTML Form & Table/Timetable.html
+++ b/HTML Form & Table/Timetable.html
@@ -5,6 +5,31 @@
     <title>Tạo bảng đơn giản</title>
 </head>
 <body>
+<!--Phần 1: Thời khoá biểu lớp T0908I-->
+<h1 align="center">Thời khoá biểu lớp T0908I</h1>
+
+<table border="1" align="center">
+    <tr bgcolor="yellow" align="center" >
+        <th width="120px">Thứ 3</th>
+        <th width="120px">Thứ 5</th>
+        <th width="120px">Thứ 7</th>
+    </tr>
+
+    <tr>
+    <tr>
+        <td> CF - T1, L1 </td>
+        <td> CF - T2, L2 </td>
+        <td> CF - T3, L3 </td>
+    </tr>
+    <tr>
+        <td> CF - T4, L4 </td>
+        <td> CF - Written test </td>
+        <td> C - T1, L1 </td>
+    </tr>
+    </tr>
+</table>
+
+<!--Phần 2: Thời khoá biểu-->
     <h2 bgcolor="blue">THỜI KHOÁ BIỂU</h2>
 <!--Thông tin lớp-->
     <table style="color: blue" align="left">
