--- a/HTML Form & Table/Advanced tables.html
+++ b/HTML Form & Table/Advanced tables.html
@@ -8,109 +8,115 @@
 <!--Phần 1: Bàn cờ vua -->
 <h1>Bàn cờ vua</h1>
 <form>
-    <table style="background-color: yellow"  align="center"  cellpadding="30px">
-        <tr>
-            <td></td>
-            <td><b>1</b></td>
-            <td><b>2</b></td>
-            <td><b>3</b></td>
-            <td><b>4</b></td>
-            <td><b>5</b></td>
-            <td><b>6</b></td>
-            <td><b>7</b></td>
-            <td><b>8</b></td>
-        </tr>
-        <tr>
-            <td><b>A</td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-        </tr>
-        <tr>
-            <td><b>B</td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-        </tr>
-        <tr>
-            <td><b>C</td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-        </tr>
-        <tr>
-            <td><b>D</td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-        </tr>
-        <tr>
-            <td><b>E</td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-        </tr>
-        <tr>
-            <td><b>F</td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-        </tr>
-        <tr>
-            <td><b>G</td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor=white> </td>
-            <td bgcolor="black"> </td>
-        </tr>
-        <tr>
-            <td><b>H</td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-            <td bgcolor="black"> </td>
-            <td bgcolor="white"> </td>
-        </tr>
-    </table>
+<!--dùng div làm khối bao quanh cái bảng-->
+    <div style="background-color: #1998f8; width: 800px" >
+        <table style="background-color: yellow; padding: 20px"  align="center"  cellpadding="30px"  width="700px">
+            <tr>
+                <td></td>
+                <td><b>1</b></td>
+                <td><b>2</b></td>
+                <td><b>3</b></td>
+                <td><b>4</b></td>
+                <td><b>5</b></td>
+                <td><b>6</b></td>
+                <td><b>7</b></td>
+                <td><b>8</b></td>
+            </tr>
+            <tr>
+                <td><b>A</td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+            </tr>
+            <tr>
+                <td><b>B</td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+            </tr>
+            <tr>
+                <td><b>C</td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+            </tr>
+            <tr>
+                <td><b>D</td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+            </tr>
+            <tr>
+                <td><b>E</td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+            </tr>
+            <tr>
+                <td><b>F</td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+            </tr>
+            <tr>
+                <td><b>G</td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor=white> </td>
+                <td bgcolor="black"> </td>
+            </tr>
+            <tr>
+                <td><b>H</td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+                <td bgcolor="black"> </td>
+                <td bgcolor="white"> </td>
+            </tr>
+        </table>
+
+    </div>
 </form>
 <br><br><br>
+
+
 <!--Phần 2: Lịch tháng 10-->
 <h1 style="color: blue" align="center">Tháng 10 - October</h1>
     <table align="center" >
@@ -134,7 +140,7 @@
             <td style="color: #0073ff">Sat</td>
         </tr>
     </table>
-    <table border="1" align="center" width="520px" >
+    <table border="1" style="border: #0073ff; border-collapse: collapse" align="center" width="520px"  >
         <tr align="center">
             <td></td>
             <td></td>
