--- a/HTML Form & Table/Timetable.html
+++ b/HTML Form & Table/Timetable.html
@@ -28,11 +28,13 @@
     </tr>
     </tr>
 </table>
-
+<br> <br> <br> <br> <br>
 <!--Phần 2: Thời khoá biểu-->
     <h2 bgcolor="blue">THỜI KHOÁ BIỂU</h2>
 <!--Thông tin lớp-->
-    <table style="color: blue" align="left">
+<table>
+<form width="100px">
+    <table style="color: blue" align="left" width="350px" margin-right="-350px">
         <tr>
             <td> Lớp : T0908I</td>
         </tr>
@@ -41,26 +43,29 @@
         </tr>
         <tr>
             <td> Giáo viên : KhoaNV </td>
+        </tr>
     </table>
 <!--Thời gian học-->
-    <table style="color: blue" align="right">
-
+    <table style="color: blue" align="right" width="350px" margin-right="-350px" >
+        <tr>
             <td> Ngày học : Thứ 3, 5, 7 </td>
         </tr>
         <tr>
             <td> Phòng học : Class3/Lab3</td>
         </tr>
+
     </table>
 <!--lịch học-->
     <form>
-        <table border="1 " border-collapse="collapse" align="center" width="700px" >
-            <tr text-align="center">
-                <th colspan="3"> </th>
-                <th bgcolor="yellow"> Thứ 3 </th>
-                <th bgcolor="yellow"> Thứ 5 </th>
-                <th bgcolor="yellow"> Thứ 7 </th>
+        <br> <br> <br> <br> <br>
+        <table border="1" border-collapse="collapse" align="center" >
+            <tr >
+                <td colspan="3"></td>
+                <td bgcolor="yellow"> Thứ 3 </td>
+                <td bgcolor="yellow"> Thứ 5 </td>
+                <td bgcolor="yellow"> Thứ 7 </td>
             </tr>
-            <tr bgcolor="orange" text align="center" >
+            <tr bgcolor="orange" text-align="center" >
                 <td> Tuần </td>
                 <td> Ngày bắt đầu </td>
                 <td> Ngày kết thúc </td>
@@ -92,5 +97,6 @@
             </tr>
         </table>
     </form>
+</table>
 </body>
 </html>
