--- a/HTML Form & Table/Form.html
+++ b/HTML Form & Table/Form.html
@@ -43,17 +43,11 @@
 
 <!--Phần 2: Đăng Ký sinh viên-->
 <!--<h2 style="background-color: #9edf9e;color:blue;text-align: left; width: 100px">ĐĂNG KÝ HỌC VIÊN</h2>-->
-<div style="background: #f8eb8e" width="550px">
+<div style="background: #f8eb8e" width="350px">
     <div>&nbsp;</div>
-    <div style="margin-left: 20px; background: #43a465;">ĐĂNG KÝ HỌC VIÊN</div>
+    <div style="margin-left: 20px; background: #43a465;" width="850px">ĐĂNG KÝ HỌC VIÊN</div>
     <form action="">
         <table style="background: #f8eb8e" width="550px">
-            <!--            <tr  style="font: medium">-->
-            <!--                <td  style="background-color: #9edf9e;color:blue;text-align: left; width: 100px">ĐĂNG KÝ </td>-->
-            <!--                <td  style="background-color: #9edf9e;color:blue;text-align: left; width: 100px">HỌC VIÊN</td>-->
-            <!--            </tr>-->
-            <!--            </tr>-->
-
             <tr>
                 <td>Họ và Tên</td>
                 <td><input type="text" size="30px" style="margin-right: 43px"></td>
