--- a/Câu lệnh điều kiện/Thang_Nam.html
+++ b/Câu lệnh điều kiện/Thang_Nam.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let month=+prompt("Nhập vào ngày: ")
+    let month=+prompt("Nhập vào tháng: ")
     switch (month) {
         case 1:
         case 5:
