--- a/Câu lệnh điều kiện/Bai7_CuocĐT.html
+++ b/Câu lệnh điều kiện/Bai7_CuocĐT.html
@@ -5,8 +5,12 @@
     <title>Cước điện thoại</title>
 </head>
 <body>
+
 <script>
-    let cuoc=+prompt("Nhập vào số tiền điện thoại ")
+    let a = +prompt("Nhap so giay goi dien:");
+    a = 30
+    let b = a*1650;
+        document.write("So tien phai tra la: " +b +"đ")
 </script>
 </body>
 </html>
