--- a/Câu lệnh điều kiện/Luyện tập cấu trúc điều kiện 01/Bai6_TiennHoaHong.html
+++ b/Câu lệnh điều kiện/Luyện tập cấu trúc điều kiện 01/Bai6_TiennHoaHong.html
@@ -16,7 +16,7 @@
         hoahong = doanhthu * 0.1;
     else
         document.write("Doanh thu quá thấp nên không thể nhận tiền hoa hồng");
-    alert('Số tiền hoa hồng nhận được là: '+ hoahong.toLocaleString('vi-VN',{style: 'currency',currency: 'VND'}));
+    document.write('Số tiền hoa hồng nhận được là: '+ hoahong+"đ");
 </script>
 </body>
 </html>
