--- a/Câu lệnh điều kiện/Switch_Case.html
+++ b/Câu lệnh điều kiện/Switch_Case.html
@@ -26,7 +26,7 @@
             document.write("Tháng có 30 ngày");
             break;
             default:
-                document.write("Nhập ngày sai");
+                document.write("Nhập tháng sai");
     }
 </script>
 </body>
