--- a/Cấu Trúc Lặp/Bang_Cuu_Chuong.html
+++ b/Cấu Trúc Lặp/Bang_Cuu_Chuong.html
@@ -5,28 +5,20 @@
     <title>Bảng Cửu Chương</title>
 </head>
 <body>
-<script>
-
-</script>
-
-
-<!--<table style="width:100%">-->
-<!--    <tr>-->
-<!--        <td>Emil</td>-->
-<!--        <td>Tobias</td>-->
-<!--        <td>Linus</td>-->
-<!--    </tr>-->
-<!--    <tr>-->
-<!--        <td>16</td>-->
-<!--        <td>14</td>-->
-<!--        <td>10</td>-->
-<!--    </tr>-->
-<!--</table>-->
-
-<!--<style>-->
-<!--    table, th, td {-->
-<!--        border:1px solid black;-->
-<!--    }-->
-<!--</style>-->
+<h2 style="text-align: center;color: red">Bảng Cửu Chương</h2>
+    <script>
+        // let a = 1;
+        let tableStr;
+        tableStr="<table border='2'>";
+        for (let j = 1; j <= 10; j++) {
+            tableStr = tableStr+ "<tr>";
+            for (let i = 2; i <= 9; i++) {
+                tableStr=tableStr+"<td>" + i +"x"+ j + "=" + i*j +"</td>";
+            }
+            tableStr=tableStr+"</tr>";
+        }document.write("<br>");
+        tableStr=tableStr+"</table>";
+        document.write(tableStr);
+    </script>
 </body>
 </html>
