--- a/Cấu Trúc Lặp/Bang_Cuu_Chuong.html
+++ b/Cấu Trúc Lặp/Bang_Cuu_Chuong.html
@@ -5,7 +5,7 @@
     <title>Bảng Cửu Chương</title>
 </head>
 <body>
-<h2 style="text-align: center;color: red">Bảng Cửu Chương</h2>
+<h2 style="color: red">Bảng Cửu Chương</h2>
     <script>
         // let a = 1;
         let tableStr;
