--- a/Câu lệnh điều kiện/Luyện tập cấu trúc điều kiện 02/Bai11_ThueCaNhan.html
+++ b/Câu lệnh điều kiện/Luyện tập cấu trúc điều kiện 02/Bai11_ThueCaNhan.html
@@ -15,19 +15,19 @@
     let b6=(a*0.3)-5.85
     let b7=(a*0.35)-9.85
 
-    if (a>0 && a<=5)
+    if (a>0 && a<=5 || 5<a && a<=10 || 11<a && a<=18 || 19<a && a<=32 || 33<a && a<=52 || 53<a<=80 ||a>=81)
         document.write("Tong so tien thue phai tra la : " +b1+ "tr");
-    else if (5<a && a<=10)
+    // else if (5<a && a<=10)
         document.write("Tong so tien thue phai tra la : " +b2+ "tr ");
-    if (11<a && a<=18)
+    // else (11<a && a<=18)
         document.write("Tong so tien thue phai tra la : " +b3+ "tr ");
-    else if (19<a && a<=32)
+    // if (19<a && a<=32)
         document.write("Tong so tien thue phai tra la : " +b4+ "tr ");
-    if (33<a && a<=52)
+    // else if (33<a && a<=52)
         document.write("Tong so tien thue phai tra la : " +b5+ "tr ");
-    else if (53<a<=80)
+    // else (53<a<=80)
         document.write("Tong so tien thue phai tra la : " +b6+ "tr ");
-   if (a>=81)
+   // if (a>=81)
         document.write("Tong so tien thue phai tra la : " +b7+ "tr ");
 </script>
 </body>
