--- a/Cấu Trúc Lặp/So_Nguyen_To.html
+++ b/Cấu Trúc Lặp/So_Nguyen_To.html
@@ -8,19 +8,19 @@
 <script>
     let numbers = parseInt(prompt("Nhap so luong so nguyen to can in: "));
     let count = 0;
-    let N = 2;
+    let n = 2;
     let dem = 0;
     while(count < numbers) {
-        for (let i = 2; i < N; i++) {
-            if(N % i == 0) {
+        for (let i = 2; i < n; i++) {
+            if(n % i == 0) {
                 dem++;
             }
         }
         if (dem == 0) {
-            document.write(N + "<br>");
+            document.write(n + "<br>");
             count++;
         }
-        N++;
+        n++;
         dem=0;
     }
     </script>
