--- a/Hàm/Luyen Tap 1/Bai 3.html
+++ b/Hàm/Luyen Tap 1/Bai 3.html
@@ -6,17 +6,19 @@
 </head>
 <body>
 <script>
-    let a=+prompt("Nhap vao so thu nhat: ");
-    let b=+prompt("Nhap vao so thu hai: ");
-    let add =0;
-    function kiemtra() {
-        if (a>b){
-            alert("So "+a+" lon hon so "+b)
-        }else
-           add = a+b;
-        alert("Tong hai so la: "+add);
+    let a = +prompt("Nhap vao so thu nhat: ");
+    let b = +prompt("Nhap vao so thu hai: ");
+    let add = 0;
+
+    function kiemTra() {
+        if (a > b) {
+            alert("So " + a + " lon hon so " + b);
+        } else
+            add = a + b;
+        alert("Tong hai so la: " + add);
     }
-    kiemtra();
+
+    kiemTra();
 </script>
 </body>
 </html>
