--- a/Hàm/Luyen tap 2/Bai 4.html
+++ b/Hàm/Luyen tap 2/Bai 4.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let a=prompt("Nhap vao mot chuoi van ban : ");
+    let a=prompt("Nhap vao mot ki tu bat ki: ");
      chuoi();
     function chuoi() {
         document.write(!(isNaN(a)));
