--- a/Hàm/Luyen tap 2/Bai 9.html
+++ b/Hàm/Luyen tap 2/Bai 9.html
@@ -6,24 +6,25 @@
 </head>
 <body>
 <script>
-    let arr= prompt(" nhập vào mảng kí tự");
+    let arr = prompt(" nhập vào mảng kí tự");
     let a = prompt("nhập vào 1 kí tự");
-    let arr1= [];
+    let arr1 = [];
 
-    function kiemtra(array,n) {
-        let count = 0 ;
-        for (let i = 0; i <array.length ; i++) {
-            arr[i]=array.slice(i,i+1);
-            if(arr[i] === n ){
-                count ++;
+    function kiemTra(array, n) {
+        let count = 0;
+        for (let i = 0; i < array.length; i++) {
+            arr[i] = array.slice(i, i + 1);
+            if (arr[i] === n) {
+                count++;
             }
         }
         return count;
-        if(count ===0){
+        if (count === 0) {
             return -1;
         }
     }
-    document.write("So ki tu trong mang:  "+kiemtra(arr,a))
+
+    document.write("So ki tu trong mang:  " + kiemTra(arr, a));
 </script>
 </body>
 </html>
